Adding an image

--- a/Portafolio/Views/Home/Index.cshtml
+++ b/Portafolio/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bienvenidos</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Soy Santiago Weihmüller</h1>
+    <p>Soy un desarrollador de Software especializado en .NET y Flutter.</p>
+    <img id="foto" src="~/imagenes/CVPHOTO.jpg" alt="Santiago Weihmüller" />
 </div>
