Moving data from the controller to the view

--- a/Portafolio/Views/Home/Index.cshtml
+++ b/Portafolio/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Soy Santiago Weihmüller</h1>
+    <h1 class="display-4">Soy @ViewBag.Nombre</h1>
     <p>Soy un desarrollador de Software especializado en .NET y Flutter.</p>
     <img id="foto" src="~/imagenes/CVPHOTO.jpg" alt="Santiago Weihmüller" />
 </div>
