--- a/Portafolio/wwwroot/css/custom.css
+++ b/Portafolio/wwwroot/css/custom.css
@@ -22,3 +22,12 @@
 #imagen-dotnet {
     width: 250px;
 }
+
+.cabecera {
+    font-weight: bold;
+}
+
+.habilidades ul {
+    list-style: none;
+    padding-left: 0
+}
