Installing bootstrap icons

--- a/Portafolio/Views/Home/Index.cshtml
+++ b/Portafolio/Views/Home/Index.cshtml
@@ -26,49 +26,52 @@
 <div style="margin-top: -105px">
 <div class="row justify-content-md-center text-center">
         <div class="col col-3 bg-white habilidades" style="border-radius: 15px 0 0 15px; box-shadow: 0 5px 5px 0 gray">
-        <h3>Back-end</h3>
-        <p>
-            Trabajo desde el lado del servidor con llamadas a la base de datos.
-        </p>
-        <p class="text-primary cabecera">
-            Stack:
-        </p>
-        <p>
-            ASP.NET Core, SQL SERVER
-        </p>
-        <p class="text-primary cabecera">Experencia: 
-            <ul>
-                <li>WEB Apis</li>
-                <li>ASP .NET CORE</li>
-                <li>Entity framework core</li>
-                <li>Blazor</li>
-                <li>Dapper</li>
-                <li>Queries principales</li>
-                <li>Principio SOLID</li>
-            </ul>
-        </p>
-    </div>
+            <i class="bi-hdd-fill"></i>
+            <h3>Back-end</h3>
+            <p>
+                Trabajo desde el lado del servidor con llamadas a la base de datos.
+            </p>
+            <p class="text-primary cabecera">
+                Stack:
+            </p>
+            <p>
+                ASP.NET Core, SQL SERVER
+            </p>
+            <p class="text-primary cabecera">Experencia: 
+                <ul>
+                    <li>WEB Apis</li>
+                    <li>ASP .NET CORE</li>
+                    <li>Entity framework core</li>
+                    <li>Blazor</li>
+                    <li>Dapper</li>
+                    <li>Queries principales</li>
+                    <li>Principio SOLID</li>
+                </ul>
+            </p>
+        </div>
+        
         <div class="col col-3 bg-white habilidades" style="border-radius: 15px 0 0 15px; box-shadow: 0 5px 5px 0 gray">
-        <h3>Front-end</h3>
-        <p>Trabajo desde el lado de la interfaz de la aplicación y su interactividad.</p>
-        <p class="text-primary cabecera">
-            Stack:
-        </p>
-        <p>
-            ASP.NET Core, SQL SERVER
-        </p>
-        <p class="text-primary cabecera">
-            Experencia:
-            <ul>
-                <li>WEB Apis</li>
-                <li>ASP .NET CORE</li>
-                <li>Entity framework core</li>
-                <li>Blazor</li>
-                <li>Dapper</li>
-                <li>Queries principales</li>
-                <li>Principio SOLID</li>
-            </ul>
-        </p>
+            <i class="bi-code-slash"></i>
+            <h3>Front-end</h3>
+            <p>Trabajo desde el lado de la interfaz de la aplicación y su interactividad.</p>
+            <p class="text-primary cabecera">
+                Stack:
+            </p>
+            <p>
+                ASP.NET Core, SQL SERVER
+            </p>
+            <p class="text-primary cabecera">
+                Experencia:
+                <ul>
+                    <li>WEB Apis</li>
+                    <li>ASP .NET CORE</li>
+                    <li>Entity framework core</li>
+                    <li>Blazor</li>
+                    <li>Dapper</li>
+                    <li>Queries principales</li>
+                    <li>Principio SOLID</li>
+                </ul>
+            </p>
+        </div>
     </div>
-</div>
 </div>
