--- a/Portafolio/Views/Shared/_Layout.cshtml
+++ b/Portafolio/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Portafolio.styles.css" asp-append-version="true" />
     <link href="~/css/custom.css" rel="stylesheet" asp-append-version="true"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
