--- a/Portafolio/wwwroot/css/custom.css
+++ b/Portafolio/wwwroot/css/custom.css
@@ -29,5 +29,10 @@
 
 .habilidades ul {
     list-style: none;
-    padding-left: 0
+    padding-left: 0;
+}
+
+.habilidades i {
+    color: #0d6efd;
+    font-size: 50px;
 }
