--- a/Portafolio/Views/Home/Index.cshtml
+++ b/Portafolio/Views/Home/Index.cshtml
@@ -4,74 +4,5 @@
    
 }
 
-<div class="text-center">
-    <h1 class="display-4">Soy @Model.Nombre</h1>
-    <p>Soy un desarrollador de Software especializado en .NET y Flutter.</p>
-    <img id="foto" src="~/imagenes/CVPHOTO.jpg" alt="@Model.Nombre" />
-</div>
-
-<div class="text-center">
-    <img id="imagen-dotnet" src="~/imagenes/dotnet.png" alt="DOTNET" />
-</div>
-
-<div class="row justify-content-center text-center bg-primary">
-    <div class="col col-md-7 seccion-bienvenida">
-        <h1>Te doy la bienvenida a mi portafolio.</h1>
-        <p>
-            Soy Técnico Superior en Desarrollo de Software con experiencia en desarrollo backend (.NET, C#), frontend (Flutter, JavaScript) y gestión de bases de datos (SQL Server, Firebase). Me apasiona crear soluciones eficientes y escalables que resuelvan problemas reales.
-        </p>
-    </div>
-</div>
-
-<div style="margin-top: -105px">
-<div class="row justify-content-md-center text-center">
-        <div class="col col-3 bg-white habilidades" style="border-radius: 15px 0 0 15px; box-shadow: 0 5px 5px 0 gray">
-            <i class="bi-hdd-fill"></i>
-            <h3>Back-end</h3>
-            <p>
-                Trabajo desde el lado del servidor con llamadas a la base de datos.
-            </p>
-            <p class="text-primary cabecera">
-                Stack:
-            </p>
-            <p>
-                ASP.NET Core, SQL SERVER
-            </p>
-            <p class="text-primary cabecera">Experencia: 
-                <ul>
-                    <li>WEB Apis</li>
-                    <li>ASP .NET CORE</li>
-                    <li>Entity framework core</li>
-                    <li>Blazor</li>
-                    <li>Dapper</li>
-                    <li>Queries principales</li>
-                    <li>Principio SOLID</li>
-                </ul>
-            </p>
-        </div>
-        
-        <div class="col col-3 bg-white habilidades" style="border-radius: 15px 0 0 15px; box-shadow: 0 5px 5px 0 gray">
-            <i class="bi-code-slash"></i>
-            <h3>Front-end</h3>
-            <p>Trabajo desde el lado de la interfaz de la aplicación y su interactividad.</p>
-            <p class="text-primary cabecera">
-                Stack:
-            </p>
-            <p>
-                ASP.NET Core, SQL SERVER
-            </p>
-            <p class="text-primary cabecera">
-                Experencia:
-                <ul>
-                    <li>WEB Apis</li>
-                    <li>ASP .NET CORE</li>
-                    <li>Entity framework core</li>
-                    <li>Blazor</li>
-                    <li>Dapper</li>
-                    <li>Queries principales</li>
-                    <li>Principio SOLID</li>
-                </ul>
-            </p>
-        </div>
-    </div>
-</div>
+<partial name="_Presentacion"></partial>
+<partial name="_Habilidades"></partial>
