--- a/Portafolio/Views/Home/Index.cshtml
+++ b/Portafolio/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@model Persona 
-@{
+﻿@{
     ViewData["Title"] = "Home Page";
    
 }
 
-<partial name="_Presentacion"></partial>
-<partial name="_Habilidades"></partial>
+<partial name="_Presentacion"/>
+<partial name="_Habilidades"/>
+
+<partial name="_SeccionProyectos"/>
