--- a/Portafolio/Views/Home/_Presentacion.cshtml
+++ b/Portafolio/Views/Home/_Presentacion.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="text-center">
-    <h1 class="display-4">Soy @Model.Nombre</h1>
+    <h1 class="display-4">Me llamo Santiago Weihmüller</h1>
     <p>Soy un desarrollador de Software especializado en .NET y Flutter.</p>
-    <img id="foto" src="~/imagenes/CVPHOTO.jpg" alt="@Model.Nombre" />
+    <img id="foto" src="~/imagenes/CVPHOTO.jpg" alt="Santiago Weihmüller" />
 </div>
 
 <div class="text-center">
