--- a/Portafolio/Views/Home/_SeccionProyectos.cshtml
+++ b/Portafolio/Views/Home/_SeccionProyectos.cshtml
@@ -1,27 +1,8 @@
-﻿@model HomeIndexViewModel
-@if (Model.proyectos is not null)
-{
-    <div class="text-center" style="padding-top: 6rem">
-        <h1>Mis trabajos recientes</h1>
-        <p>Aquí puedes ver algunos de mis trabajos más recientes</p>
-    </div>
-    <div class="container">
-        <div class="row row-cols-1 row-cols-md-2 g-4">
-            @foreach (var proyecto in Model.proyectos)
-            {
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="@proyecto.imagenURL" class="card-img-top mx-auto d-block" alt="Proyecto" style="width: 100px" />
-                        <div class="card-body">
-                            <h5 class="card-title">@proyecto.titulo</h5>
-                            <p class="card-text">@proyecto.descripcion</p>
-                        </div>
-                        <div class="card-footer">
-                            <a class="btn btn-primary" href="@proyecto.link" target="_blank" rel="noreferrer noopener">Visitar</a>
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
-    </div>
-}
+﻿@model IEnumerable<Proyecto>
+
+<div class="text-center" style="padding-top: 6rem">
+    <h1>Mis trabajos recientes</h1>
+    <p>Aquí puedes ver algunos de mis trabajos más recientes</p>
+</div>
+
+<partial name="_ListadoProyectos" model="Model"/>
